# mxgraph2pptx

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
mxgraph2pptx/model/: mxcell.py  mxcell_type.py
src/: index.ts
