[tool.poetry]
name = "mxgraph2pptx"
version = "0.1.0"
description = "Project to convert mxgraph diagams (draw.io / diagrams.net) into Power Point Files (PPTX)."
authors = ["Felix Hoffmann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-pptx = "^0.6.21"
beautifulsoup4 = "^4.10.0"
Pillow = "^9.0.0"


[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
